# drafter-web

./: .gitignore  BUILD_ERROR_ANALYSIS.md  CHATGPT_ANALYSIS.md  CHATGPT_CODE_ORGANIZATION_ANALYSIS.md  CHATGPT_GENERATE_PAGE_REVIEW.md  CHATGPT_JSX_DEBUG_ISSUE.md  CHATGPT_REFACTOR_SUCCESS.md  CHATGPT_REVIEW_PR.md  CHATGPT_STEP3_GROUPED_DISPLAY_ANALYSIS.md  CODEX_GUARDRAILS.md  CODEX_STEP3_GUARDRAILS.md  COMPLETE_CODE_ARCHIVE.md  COMPLETE_SOURCE_CODE.md  COPY_FONTS_NOW.md  DRAFTER_PR6_SURGICAL_FIX.md  FINAL_STEP3_INTEGRATION.md  GITHUB_SETUP.md  GOOGLE_CLOUD_SETUP.md  GOOGLE_SHEETS_SETUP.md  GeneratePage_backup.tsx  MIGRATION_GUIDE.md  PULL_REQUEST_TEMPLATE.md  README.md  SETUP_INSTRUCTIONS.md  STEP3_FIXES_PLAN.md  STEP3_IMPLEMENTATION_STATUS.md  SUPABASE_INTEGRATION_GUIDE.md  TIKTOK_FONT_SETUP.md  _tmpGeneratePage.tsx  check-setup.bat  copy-correct-fonts.bat  copy-fonts-now.bat  copy-tiktok-fonts.bat  drafter_pr6_build_fix_8c72c87.md  drafter_pr6_step3_hotfix.md  generate-code-archive.ps1  install-framer-motion.bat  next.config.js  package-lock.json  package-web-only.json  (+8 more)
docs/: canvas-thumbnail-fix-implementation.md  debugging-improvements.md  dev-port-3000.md  drawCover-function-fix.md  image-scaling-text-positioning-fix.md  new-features.md
public/fonts/: README.md
scripts/: clean-start.mjs  port-watcher.ps1
scripts/preflight/: lock-port-3000.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: fonts.css  globals.css  layout.tsx  page.tsx
src/components/: ClientInitializer.tsx  CloudUploadExample.tsx  MultiSheetSelector.tsx  (+7 more)
supabase/: schema.sql
(+133 files in other folders)
